--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-usuario-lista></app-usuario-lista>
 <!-- Banner -->
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
