Correcion de errores, Boton administrador y home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,15 +30,7 @@
             </div>
         </div>
     </nav>
-<!-- Botones a los componentes -->
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a class="nav-link active" routerLink="/trayecto" routerLinkActive="active">Trayecto</a>
-            <a class="nav-link active" routerLink="/usuario/detail" routerLinkActive="active">Usuario</a>
-            <!-- Usar como pruebas, eliminar al terminar -->
-            <a class="nav-link active" routerLink="/alquiler" routerLinkActive="active">Prueba</a>
-        </li>
-    </ul>
+<app-botones></app-botones> 
     <div>
         <router-outlet></router-outlet>
         <br>
