--- a/src/app/auth/auth-sign-up/auth-sign-up.component.html
+++ b/src/app/auth/auth-sign-up/auth-sign-up.component.html
@@ -19,7 +19,8 @@
                 </select>
             </div>
             <div class="justify-content-center align-self-center">
-                <button type="submit" class="btn btn-primary"> Sign Up</button>
+                <!--<button type="submit" class="btn btn-primary"> Sign Up</button>-->
+                <a href="http://localhost:4200/home">Sign Up</a>
             </div>
         </form>
     </div>
