Cambios a la interfaz gráfica. Usuario Listar listo. Usuario Create Listo. Falta usuario Update. Interfaz de usuario bonita pero aún no funcional.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,21 +1,14 @@
-<a routerLink="" >Ciudad</a>
-<br>
-<a routerLink="" >Peaje</a>
-<br>
-<a routerLink="" >Seguro</a>
-<br>
-<a routerLink="" >Calificacion</a>
-<br>
-<a routerLink="" >Usuarios</a>
-<br>
-<a routerLink="" >Pagos</a>
-<br>
-<a routerLink="" >Vehiculos</a>
-<br>
-<a routerLink="" >Trayectos</a>
-<br>
-<a routerLink="" >Alquileres</a>
-<br>
-<a routerLink="" >Notificacion</a>
-<br>
-<a routerLink="" >InfoTC</a>
+
+<div class="btn-group-vertical btn-block">
+  <button type="button" class="btn">Alquileres</button>
+  <button type="button" class="btn">Calificaciones</button>
+  <button type="button" class="btn">Ciudades</button>
+  <button type="button" class="btn">Notificaciones</button>
+  <button type="button" class="btn">Pagos</button>
+  <button type="button" class="btn">InfoTC</button>
+  <button type="button" class="btn">Peajes</button>
+  <button type="button" class="btn">Seguros</button>
+  <button type="button" class="btn">Trayectos</button>
+  <button type="button" class="btn" routerLink="/usuario/lista">Usuarios</button>
+  <button type="button" class="btn">Vehiculos</button>
+</div>
