--- a/src/app/auth/auth-sign-up/auth-sign-up.component.html
+++ b/src/app/auth/auth-sign-up/auth-sign-up.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-6 offset-3">
         <br>
-        <h2 class="text-center">Sign up</h2>
+        <h2 class="text-center">Login</h2>
         <br>
         <form name="sign-up" (ngSubmit)="f.form.valid && signUp()" #f="ngForm" novalidate>
             <div class="form-group">
@@ -20,7 +20,7 @@
             </div>
             <div class="justify-content-center align-self-center">
                 <!--<button type="submit" class="btn btn-primary"> Sign Up</button>-->
-                <a href="http://localhost:4200/home">Sign Up</a>
+                <a href="http://localhost:4200/home">Login</a>
             </div>
         </form>
     </div>
