--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand"  routerLink="">
             <div class="form-inline">
-                <h2 class="mainTitle">s4_carpooling-Front</h2>
+                <h2 class="mainTitle">Carpooling</h2>
             </div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
