--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,8 +1,9 @@
 <!-- Botones a los componentes -->
+
 <ul class="nav nav-pills">
   <li class="nav-item">
+  	  <a class="nav-link active" routerLink="/usuario/menu" routerLinkActive="active">Usuario</a>
       <a class="nav-link active" routerLink="/trayecto" routerLinkActive="active">Trayecto</a>
-      <a class="nav-link active" routerLink="/usuario/detail" routerLinkActive="active">Usuario</a>
       <!-- Usar como pruebas, eliminar al terminar -->
       <a class="nav-link active" routerLink="/home" routerLinkActive="active">pruebas</a>
   </li>
