--- a/src/app/usuario/usuario-edit/usuario-edit.component.html
+++ b/src/app/usuario/usuario-edit/usuario-edit.component.html
@@ -1,3 +1,53 @@
-<p>
-  usuario-edit works!
-</p>
+ <h2 class="title">Editar perfil</h2>
+                    <form class="form-horizontal">
+                        <fieldset class="fieldset">
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="Isabela">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Apellido</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="Sarmiento">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Documento</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="2222222">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Celular</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="31111111">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre de usuario</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="IsaPro"> 
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Correo</label >
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="1234@gmail.com">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Contraseña</label >
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="Isabela">
+                                </div>
+                            </div>
+                        </fieldset>
+                        <div class="form-group">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+  								<button type="button" class="btn btn-danger">Descartar cambios</button>
+  								<button type="button" class="btn btn-success">Aplicar cambios</button>
+							</div>
+                        </div>
+                    </form>
