--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,6 +5,6 @@
   	  <a class="nav-link active" routerLink="/usuario/menu" routerLinkActive="active">Usuario</a>
       <a class="nav-link active" routerLink="/trayecto" routerLinkActive="active">Trayecto</a>
       <!-- Usar como pruebas, eliminar al terminar -->
-      <a class="nav-link active" routerLink="/home" routerLinkActive="active">pruebas</a>
+      <a class="nav-link active" routerLink="/alquiler" routerLinkActive="active">pruebas</a>
   </li>
 </ul>
