--- a/src/app/home/botones/botones.component.html
+++ b/src/app/home/botones/botones.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<ul class="nav justify-content-center">
 		<li class="nav-item">
-			<a class="nav-link" routerLink="/auth/:sign-up" >Login</a>
+			<a class="nav-link" routerLink="/login" >Login</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" routerLink="/usuario/create">SignUp</a>
