Interfaz usuario terminada. Falta corregir la implementacion del create

--- a/src/app/usuario/menu/menu.component.html
+++ b/src/app/usuario/menu/menu.component.html
@@ -13,7 +13,7 @@
                     </div>
             		<nav class="side-menu">
         				<ul class="nav">
-        					<li class="active"><a href="#"><span class="fa fa-user"></span> Información Principal</a></li>
+        					<li class="active"><a routerLink="/usuario/menu/info"><span class="fa fa-user"></span> Información Principal</a></li>
         					<li><a href="#">Vehiculos</a></li>
         					<li><a href="#">Calificaciones</a></li>
         					<li><a href="#">Notificaciones</a></li>
@@ -21,54 +21,7 @@
         				</ul>
         			</nav>
                 </div>
-                <div class="content-panel">
-                    <h2 class="title">Perfil</h2>
-                    <form class="form-horizontal">
-                        <fieldset class="fieldset">
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="Pepito" readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Apellido</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="Perez" readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Documento</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="1020844143" readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Celular</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="3212225557" readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre de usuario</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="pepitoloquito" readonly> 
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Correo</label >
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="pepitoloquito@gmail.com" readonly>
-                                </div>
-                            </div>
-                        </fieldset>
-                        <div class="form-group">
-                            <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-  									<button type="button" class="btn btn-primary" routerLink="/usuario/edit">Editar Usuario</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+            
             </div>
         </section>
     </div>
