--- a/src/app/usuario/usuario-info/usuario-info.component.html
+++ b/src/app/usuario/usuario-info/usuario-info.component.html
@@ -1,53 +1,48 @@
- <h2 class="title">Editar perfil</h2>
+<div class="content-panel">
+                    <h2 class="title">Perfil</h2>
                     <form class="form-horizontal">
                         <fieldset class="fieldset">
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value={{usurioActu}}>
+                                    <input type="text" class="form-control" value="Pepito" readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Apellido</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="Sarmiento">
+                                    <input type="text" class="form-control" value="Perez" readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Documento</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="2222222">
+                                    <input type="text" class="form-control" value="1020844143" readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Celular</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="31111111">
+                                    <input type="text" class="form-control" value="3212225557" readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre de usuario</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="IsaPro"> 
+                                    <input type="text" class="form-control" value="pepitoloquito" readonly> 
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Correo</label >
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="1234@gmail.com">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Contraseña</label >
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="Isabela">
+                                    <input type="text" class="form-control" value="pepitoloquito@gmail.com" readonly>
                                 </div>
                             </div>
                         </fieldset>
                         <div class="form-group">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-  								<button type="button" class="btn btn-danger">Descartar cambios</button>
-  								<button type="button" class="btn btn-success">Aplicar cambios</button>
-							</div>
+                            <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
+  									<button type="button" class="btn btn-primary" routerLink="/usuario/edit">Editar Usuario</button>
+                            </div>
                         </div>
                     </form>
+                </div>
