--- a/src/app/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/usuario/usuario-create/usuario-create.component.html
@@ -15,8 +15,8 @@
                 </div> 
                 <div class="form-group">
                     <label for="apellido"><b>Apellido</b></label>
-                    <input type="text" name="apellido" class="form-control" id="apellido" [(ngModel)]="usuario.apellido"
-                        #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && apellido.invalid }" required>
+                    <input type="text" value="Sarmiento" name="apellido" class="form-control" id="apellido" [(ngModel)]="usuario.apellido"
+                        #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && apellido.invalid }"  value="Sarmiento" required>
                     <div class="invalid-feedback">
                         <div>Falta el apellido</div>
                     </div>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password"><b>Constrasena</b></label>
+                    <label for="password"><b>Constraseña</b></label>
                     <input type="text" name="password" class="form-control" id="password" [(ngModel)]="usuario.password"
                         #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.invalid }" required>
                     <div class="invalid-feedback">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="correo"><b>Correo</b></label>
+                    <label for="correo"><b>Correo electrónico</b></label>
                     <input type="text" name="correo" class="form-control" id="correo" [(ngModel)]="usuario.correo"
                         #correo="ngModel" [ngClass]="{ 'is-invalid': f.submitted && correo.invalid }" required>
                     <div class="invalid-feedback">
@@ -63,7 +63,7 @@
                 </div>
                 <br>
                 <div class="row form-inline justify-content-center align-self-center">
-                    <button type="submit" class="btn btn-primary" routerLink="home" >Create</button>
+                    <button type="submit" class="btn btn-primary">Create</button>
                     <div class="divider"></div>
                     <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
                 </div>
