--- a/src/app/usuario/usuario-edit/usuario-edit.component.html
+++ b/src/app/usuario/usuario-edit/usuario-edit.component.html
@@ -1,10 +1,11 @@
+
  <h2 class="title">Editar perfil</h2>
                     <form class="form-horizontal">
                         <fieldset class="fieldset">
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value={{usurioActu}}>
+                                    <input type="text" class="form-control" value="uahdj">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -51,3 +52,5 @@
 							</div>
                         </div>
                     </form>
+Username: {{usernameActual}}
+
