--- a/src/app/usuario/usuario-info/usuario-info.component.html
+++ b/src/app/usuario/usuario-info/usuario-info.component.html
@@ -41,7 +41,7 @@
                         </fieldset>
                         <div class="form-group">
                             <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-  									<button type="button" class="btn btn-primary" routerLink="/usuario/edit">Editar Usuario</button>
+  									<button type="button" class="btn btn-primary" [routerLink]= "['/usuario/menu', { outlets: { 'content': 'edit' } }]">Editar Usuario</button>
                             </div>
                         </div>
                     </form>
