--- a/src/app/usuario/menu/menu.component.html
+++ b/src/app/usuario/menu/menu.component.html
@@ -9,7 +9,7 @@
                     <div class="user-info">
                         <img class="img-profile img-circle img-responsive center-block" src="http://chittagongit.com//images/generic-user-icon/generic-user-icon-13.jpg" alt="">
                         <ul class="meta list list-unstyled">
-                            <li class="name">Pepito Pérez
+                            <li class="name">{{usuario.nombre}} {{usuario.apellido}}  
                             </li>
                         </ul>
                     </div>
