--- a/src/app/usuario/usuario-info/usuario-info.component.html
+++ b/src/app/usuario/usuario-info/usuario-info.component.html
@@ -1,41 +1,41 @@
 <div class="content-panel">
-                    <h2 class="title">Perfil</h2>
+                <h2 class="title">Perfil</h2>
                     <form class="form-horizontal">
                         <fieldset class="fieldset">
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="Pepito" readonly>
+                                    <input type="text" class="form-control" value={{usuario.nombre}}  readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Apellido</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="Perez" readonly>
+                                    <input type="text" class="form-control" value={{usuario.apellido}}  readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Documento</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="1020844143" readonly>
+                                    <input type="text" class="form-control" value={{usuario.documento}}  readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Celular</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="3212225557" readonly>
+                                    <input type="text" class="form-control" value={{usuario.celular}}  readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre de usuario</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="pepitoloquito" readonly> 
+                                    <input type="text" class="form-control" value={{usuario.username}} readonly> 
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Correo</label >
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="pepitoloquito@gmail.com" readonly>
+                                    <input type="text" class="form-control" value={{usuario.correo}} readonly>
                                 </div>
                             </div>
                         </fieldset>
