Termina Listar,Crear y Editar Peaje,Alquiler y peaje
Componentes sin probar, vistas nuevas y reorganizacion de la pagina principal y admin

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,13 +1,13 @@
 
 <div class="btn-group-vertical btn-block">
-  <button type="button" class="btn">Alquileres</button>
+  <button type="button" class="btn" routerLink="/alquiler/listar">Alquileres</button>
   <button type="button" class="btn">Calificaciones</button>
   <button type="button" class="btn">Ciudades</button>
   <button type="button" class="btn">Notificaciones</button>
   <button type="button" class="btn">Pagos</button>
   <button type="button" class="btn">InfoTC</button>
-  <button type="button" class="btn">Peajes</button>
-  <button type="button" class="btn">Seguros</button>
+  <button type="button" class="btn" routerLink="/peaje/admin">Peajes</button>
+  <button type="button" class="btn" routerLink="/seguro/admin">Seguros</button>
   <button type="button" class="btn">Trayectos</button>
   <button type="button" class="btn" routerLink="/usuario/lista">Usuarios</button>
   <button type="button" class="btn">Vehiculos</button>
