--- a/src/app/alquiler/listar-alquiler/listar-alquiler.component.html
+++ b/src/app/alquiler/listar-alquiler/listar-alquiler.component.html
@@ -1,5 +1,5 @@
 <div class="text-right">
-	<button type="button" class="btn btn-primary" routerLink="/home">Volver</button>
+	<button type="button" class="btn btn-primary" routerLink="/admin">Volver</button>
 </div>
 <table class="table">
 <thead class="table-info">
@@ -33,4 +33,4 @@
 </tbody>
 </table>
 <div class="text-right">
-	<button type="button" class="btn btn-primary" routerLink="/home">Volver</button>
+	<button type="button" class="btn btn-primary" routerLink="/admin">Volver</button>
