--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,10 +1,10 @@
 <!-- Botones a los componentes -->
 
 <ul class="nav nav-pills">
-  <li class="nav-item">
+  <li class="nav justify-content-center">
   	  <a class="nav-link active" routerLink="/usuario/menu" routerLinkActive="active">Usuario</a>
       <a class="nav-link active" routerLink="/trayecto" routerLinkActive="active">Trayecto</a>
       <!-- Usar como pruebas, eliminar al terminar -->
-      <a class="nav-link active" routerLink="/alquiler" routerLinkActive="active">pruebas</a>
+      <a class="nav-link active" routerLink="/alquiler/crear" routerLinkActive="active">pruebas</a>
   </li>
 </ul>
