--- a/src/app/seguro/crear-seguro/crear-seguro.component.html
+++ b/src/app/seguro/crear-seguro/crear-seguro.component.html
@@ -1,3 +1,28 @@
-<p>
-  crear-seguro works!
-</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <br>
+            <h2 class="text-center">Creando Seguro</h2>
+            <br>
+            <form name="usuario" (ngSubmit)="f.form.valid && createUsuario()" #f="ngForm" novalidate>
+                <div class="form-group">
+                    <label for="nombre"><b>Nombre</b></label>
+                    <input type="text" name="nombre" class="form-control" id="nombre" [(ngModel)]="seguro.nombre"
+                        #nombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta el nombre</div>
+                    </div>
+                </div> 
+                
+                
+                <br>
+                <div class="row form-inline justify-content-center align-self-center">
+                    <button type="submit" class="btn btn-primary" (click)="createAlquiler()" >Create</button>
+                    <div class="divider"></div>
+                    <button type="button" class="btn btn-danger" (click)="cancelEdition()">Cancel</button>
+                </div>
+            </form>
+            <br>
+        </div>
+    </div>
+</div>
