--- a/src/app/alquiler/editar-alquiler/editar-alquiler.component.html
+++ b/src/app/alquiler/editar-alquiler/editar-alquiler.component.html
@@ -1,3 +1,42 @@
-<p>
-  editar-alquiler works!
-</p>
+<h2 class="title">Editar Alquiler</h2>
+                    <form name="alquiler" (ngSubmit)="f.form.valid && updatealquiler()" #f="ngForm" novalidate class="form-horizontal">
+                        <fieldset class="fieldset">
+                            <div class="form-group">
+                                <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" name="alquilerNombre" id="alquilerNombre" class="form-control" 
+                                    value="Alquiler" [(ngModel)]="alquiler.name" #alquilerNombre="ngModel" 
+                                    [ngClass]="{ 'is-invalid': f.submitted && alquilerNombre.invalid }" required>
+                                    <div class="invalid-feedback">
+                                            <div>El nombre del alquiler es invalido</div>
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Arrendatario</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="100">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Dueño</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="200">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Vehiculo</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="100">
+                                </div>
+                            
+                            
+                            </div>
+                        </fieldset>
+                        <div class="form-group">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+  								<button type="button" class="btn btn-danger" (click)="cancelEdition()">Descartar cambios</button>
+  								<button type="button" class="btn btn-success" (click)="updatealquiler()">Aplicar cambios</button>
+							</div>
+                        </div>
+                    </form>
