--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,12 +19,12 @@
                     <div class="form-inline">
                         <li class="right-space"><a id="signup-navbar-item" routerLink="/usuario/create"><span class="fa fa-user"></span>
                                 Sign Up</a></li>
-                        <li><a id="login-navbar-item" routerLink="/auth/login"><span class="fa fa-sign-in"></span>Login</a></li>
+                        <li><a id="login-navbar-item" routerLink="/home/login"><span class="fa fa-sign-in"></span>Login</a></li>
                     </div>
                 </div>
                 <div class="flex-row" *ngxPermissionsOnly="['CLIENT', 'ADMIN']">
                     <div class="form-inline">
-                        <li><a id="logout-navbar-item" (click)="logout()" href="#"><span class="fa fa-sign-out"></span>Logout</a></li>
+                        <li><a id="logout-navbar-item" (click)="logout()" href=""><span class="fa fa-sign-out"></span>Logout</a></li>
                     </div>
                 </div>
             </div>
