--- a/src/app/peaje/editar-peaje/editar-peaje.component.html
+++ b/src/app/peaje/editar-peaje/editar-peaje.component.html
@@ -1,3 +1,42 @@
-<p>
-  editar-peaje works!
-</p>
+<h2 class="title">Editar Peaje</h2>
+                    <form name="alquiler" (ngSubmit)="f.form.valid && updatePeaje()" #f="ngForm" novalidate class="form-horizontal">
+                        <fieldset class="fieldset">
+                            <div class="form-group">
+                                <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" name="nombre" id="nombre" class="form-control" 
+                                    value="Peaje" [(ngModel)]="peaje.name" #nombre="ngModel" 
+                                    [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+                                    <div class="invalid-feedback">
+                                            <div>El nombre del alquiler es invalido</div>
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Costo</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="100">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Latitud</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="200">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Longitud</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="100">
+                                </div>
+                            
+                            
+                            </div>
+                        </fieldset>
+                        <div class="form-group">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+  								<button type="button" class="btn btn-danger" (click)="cancelEdition()">Descartar cambios</button>
+  								<button type="button" class="btn btn-success" (click)="updatePeaje()">Aplicar cambios</button>
+							</div>
+                        </div>
+                    </form>
