--- a/src/app/seguro/listar-seguro/listar-seguro.component.html
+++ b/src/app/seguro/listar-seguro/listar-seguro.component.html
@@ -1,3 +1,26 @@
-<p>
-  listar-seguro works!
-</p>
+<div class="text-right">
+    <button type="button" class="btn btn-primary" routerLink="/home">Volver</button>
+  </div>
+  <table class="table">
+  <thead class="table-info">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Tipo</th>
+      
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let i of seguro">
+    <td >		
+      {{i.id}}
+    </td>
+    <td >
+      {{i.tipo}}
+    </td>
+    
+  </tr>
+  
+  </tbody>
+  </table>
+  <div class="text-right">
+    <button type="button" class="btn btn-primary" routerLink="/home">Volver</button>
