--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -1,41 +1,42 @@
-<div class="row">
-    <div class="col-3"></div>
-    <div class="col-6">
-        <br>
-        <h2 class="text-center">Crear un Trayecto</h2>
-        <br>
-        <form name="cliente" (ngSubmit)="f.form.valid && createCliente()" #f="ngForm" novalidate>
-            <div class="form-group">
-                <label for="clienteName"><b>Name</b></label>
-                <input type="text" name="clienteName" class="form-control" id="clienteName" [(ngModel)]="cliente.name"
-                    #clienteName="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteName.invalid }" required>
-                <div class="invalid-feedback">
-                    <div>Introducir un nombre valido</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <br>
+            <h2 class="text-center">Bienvenido a Trayecto</h2>
+            <br>
+            <form name="Trayecto" (ngSubmit)="f.form.valid && createTrayecto()" #f="ngForm" novalidate>
+                <div class="form-group">
+                    <label for="id"><b>id</b></label>
+                    <input type="text" name="id" class="form-control" id="id" [(ngModel)]="trayecto.id"
+                        #nombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta el id</div>
+                    </div>
+                </div> 
+                <div class="form-group">
+                    <label for="fechaInicio"><b>Fecha de Inicio</b></label>
+                    <input type="text" name="fechaInicio" class="form-control" id="fechaInicio" [(ngModel)]="trayecto.fechaInicio"
+                        #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicio.invalid }"  required>
+                    <div class="invalid-feedback">
+                        <div>Falta la fecha de inicio</div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="clienteAddress"><b>Fecha Inicio</b></label>
-                <input type = "text" name="clienteAddress" class="form-control" id="clienteAddress" [(ngModel)]="cliente.address"
-                    #clienteAddress="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteAddress.invalid }"
-                    required>
-                <div class="invalid-feedback">
-                    <div>Falta la fecha </div>
+                <div class="form-group">
+                    <label for="fechaFinal"><b>Fecha Final</b></label>
+                    <input type="text" name="fechaFinal" class="form-control" id="fechaFinal" [(ngModel)]="trayecto.fechaFinal"
+                        #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaFinal.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta la fecha final</div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="clienteCity"><b>Fecha Fin</b></label>
-                <input type="text" name="clienteCity" class="form-control" id="clienteCity" [(ngModel)]="cliente.city"
-                    #clienteCity="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteCity.invalid }" required>
-                <div class="invalid-feedback">
-                    <div>Falta introducir una fecha</div>
+                <br>
+                <div class="row form-inline justify-content-center align-self-center">
+                    <button type="submit" class="btn btn-primary">Create</button>
+                    <div class="divider"></div>
+                    <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
                 </div>
-            </div>
-            <div class="row form-inline justify-content-center align-self-center">
-                <button type="submit" class="btn btn-primary">Create</button>
-                <div class="divider"></div>
-                <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
-            </div>
-        </form>
+            </form>
+            <br>
+        </div>
     </div>
-    <div class="col-3"></div>
 </div>
