--- a/src/app/trayecto/trayecto-edit/trayecto-edit.component.html
+++ b/src/app/trayecto/trayecto-edit/trayecto-edit.component.html
@@ -1,3 +1,38 @@
-<p>
-  trayecto-edit works!
-</p>
+ <h2 class="title">Editar Trayecto</h2>
+                    <form class="form-horizontal" (ngSubmit)="f.form.valid && updateTrayecto()" #f="ngForm" novalidate>
+                        <fieldset class="fieldset">
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">id</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value={{trayecto.id}} id="id" [(ngModel)]="trayecto.id" [ngModelOptions]="{standalone: true}" #id="ngModel" [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
+                                    <div class="invalid-feedback">
+                                        <div>Falta el id</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Fecha Inicial</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value={{trayecto.fechaInicio}} id="fechaInicio" [(ngModel)]="trayecto.fechaInicio" [ngModelOptions]="{standalone: true}" #fechaInicio="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicio.invalid }"  required>
+                                        <div class="invalid-feedback">
+                                            <div>Falta la fecha inicial</div>
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Fecha final</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value={{trayecto.fechaFinal}} id="fechaFinal" [(ngModel)]="trayecto.fechaFinal" [ngModelOptions]="{standalone: true}" #fechaFinal="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaFinal.invalid }" required>
+                                        <div class="invalid-feedback">
+                                            <div>Falta la fecha final</div>
+                                        </div>
+                                </div>
+                            </div>
+                        </fieldset>
+                        <div class="form-group">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+  								<button type="button" class="btn btn-danger">Descartar cambios</button>
+                                <button type="submit" class="btn btn-primary">Aplicar cambios</button>
+							</div>
+                        </div>
+                    </form>
